[gd_scene load_steps=6 format=3 uid="uid://dxmmwaa2m58ff"]

[ext_resource type="Script" uid="uid://rfgme1u3dwts" path="res://main.gd" id="1_1bvp3"]
[ext_resource type="Texture2D" uid="uid://bbgwpoiadoloa" path="res://Pixel Adventure 1/Free/Background/background.png" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://ctrq7l3luhijd" path="res://Pixel Adventure 1/Free/Menu/Buttons/Start.png" id="2_h2yge"]
[ext_resource type="Texture2D" uid="uid://1wy4v4rarxdc" path="res://Pixel Adventure 1/Free/Menu/Buttons/Quit.png" id="3_1bvp3"]
[ext_resource type="Texture2D" uid="uid://dllr1pwuea056" path="res://Pixel Adventure 1/Free/Menu/Buttons/ChatGPT Image 13_14_08 16 thg 9, 2025.png" id="5_lquwl"]

[node name="main" type="Node2D"]
script = ExtResource("1_1bvp3")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -5.0
offset_right = 1535.0
offset_bottom = 1019.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.750674, 0.638158)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_ig7tw")

[node name="Start-BT" type="Button" parent="."]
offset_left = 460.0
offset_top = 76.0
offset_right = 1492.0
offset_bottom = 1108.0
scale = Vector2(0.2, 0.2)
icon = ExtResource("2_h2yge")
flat = true

[node name="Quit-BT" type="Button" parent="."]
offset_left = 463.0
offset_top = 309.0
offset_right = 1495.0
offset_bottom = 1341.0
scale = Vector2(0.2, 0.2)
icon = ExtResource("3_1bvp3")
flat = true

[node name="LevelSelectBt" type="Button" parent="."]
offset_left = 468.0
offset_top = 216.0
offset_right = 2012.0
offset_bottom = 1248.0
scale = Vector2(0.133143, 0.140526)
icon = ExtResource("5_lquwl")
flat = true

[connection signal="pressed" from="Start-BT" to="." method="_on_start_bt_pressed"]
[connection signal="pressed" from="Quit-BT" to="." method="_on_quit_bt_pressed"]
[connection signal="pressed" from="LevelSelectBt" to="." method="_on_level_select_bt_pressed"]
